# family-ai-lab

./: docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
app/: Dockerfile  Home.py  pyproject.toml  utils_lms.py
app/data/: users.json
app/pages/: 01_📐_Sprint_1_Math.py  02_🧬_Sprint_2_Embeddings.py
app/pages/1_Module_1_Foundations/: 00_🐍_Python_Fundamentals.py  01_📐_The_Dot_Product.py  02_🧬_Embeddings.py  03_🔢_NumPy_Arrays.py  04_🐼_Pandas_DataFrames.py
app/pages/2_Module_2_Machine_Learning/: 01_🤖_Intro_to_ML.py  02_📈_Linear_Regression.py  03_👨‍👩‍👧‍👦_Clustering.py
app/pages/3_Module_3_Deep_Learning/: 01_🧠_Neural_Networks.py
tools/: gemini-tool.py
